more home edits

--- a/index.html
+++ b/index.html
@@ -15,19 +15,29 @@
       </div>
 
       <div id="navbar">
-        <a id="websitename">MIRROR</a>
-        <a class="tab" id="active" href="#">HOME</a>
-        <a class="tab" href="">MY ACCOUNT</a>
-        <a class="tab" href="">BETA VERSION</a>
+        <div id="mirror">
+          <a id="websitename">MIRROR</a>
+        </div>
+
+        <div id="menu">
+          <a class="tab" id="active" href="#">HOME</a>
+          <a class="tab" href="">MY ACCOUNT</a>
+          <a class="tab" href="">BETA VERSION</a>
+        </div>
       </div>
 
       <div id="content">
         <img id="logo" src="mirror.png">
+        <p>Welcome to your Mirror, Alex.</p>
+        <p>This is the fourth time you have looked at yourself today.</p>
+        <p>daily reflection: 42% completed</p>
+        <p>current rank: 109</p>
+        <p>
       </div>
 
       <div id="footer">
-        <a class="tab" href="">PRIVACY POLICY</a>
-        <a class="tab" href="">TERMS & CONDITIONS</a>
+          <a class="tab" href="">PRIVACY POLICY</a>
+          <a class="tab" href="">TERMS & CONDITIONS</a>
       </div>
 
     </div>
