--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       <div id="content">
         <img id="logo" src="mirror.png">
         <p>Welcome to your Mirror, Alex.</p>
-        <p>This is the fourth time you have looked at yourself today.</p>
+        <p>This is your fourth look today.</p>
+        <!-- <p>-</p> -->
         <p>daily reflection: 42% completed</p>
         <p>current rank: 109</p>
-        <p>
       </div>
 
       <div id="footer">
