--- a/account.html
+++ b/account.html
@@ -20,8 +20,8 @@
         </div>
 
         <div id="menu">
-          <a class="tab" id="active" href="#">HOME</a>
-          <a class="tab" href="">MY ACCOUNT</a>
+          <a class="tab" href="https://soheekiim.github.io/mirror/">HOME</a>
+          <a class="tab" href="#">MY ACCOUNT</a>
           <a class="tab" href="">BETA VERSION</a>
         </div>
       </div>
