--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div id="menu">
           <a class="tab" id="active" href="#">HOME</a>
-          <a class="tab" href="">MY ACCOUNT</a>
+          <a class="tab" href="https://soheekiim.github.io/mirror/account/">MY ACCOUNT</a>
           <a class="tab" href="">BETA VERSION</a>
         </div>
       </div>
