--- a/account.html
+++ b/account.html
@@ -22,7 +22,7 @@
         <div id="menu">
           <a class="tab" href="https://soheekiim.github.io/mirror/">HOME</a>
           <a class="tab" href="#">MY ACCOUNT</a>
-          <a class="tab" href="">BETA VERSION</a>
+          <a class="tab" href="https://soheekiim.github.io/mirror/beta">BETA VERSION</a>
         </div>
       </div>
 
@@ -45,8 +45,8 @@
       </div>
 
       <div id="footer">
-          <a class="tab" href="">PRIVACY POLICY</a>
-          <a class="tab" href="">TERMS & CONDITIONS</a>
+          <a class="tab" href="https://soheekiim.github.io/mirror/privacy">PRIVACY POLICY</a>
+          <a class="tab" href="https://soheekiim.github.io/mirror/terms">TERMS & CONDITIONS</a>
       </div>
 
     </div>
