--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
         <div id="menu">
           <a class="tab" id="active" href="#">HOME</a>
-          <a class="tab" href="https://soheekiim.github.io/mirror/account/">MY ACCOUNT</a>
-          <a class="tab" href="">BETA VERSION</a>
+          <a class="tab" href="https://soheekiim.github.io/mirror/account">MY ACCOUNT</a>
+          <a class="tab" href="https://soheekiim.github.io/mirror/beta">BETA VERSION</a>
         </div>
       </div>
 
@@ -36,8 +36,8 @@
       </div>
 
       <div id="footer">
-          <a class="tab" href="">PRIVACY POLICY</a>
-          <a class="tab" href="">TERMS & CONDITIONS</a>
+          <a class="tab" href="https://soheekiim.github.io/mirror/privacy">PRIVACY POLICY</a>
+          <a class="tab" href="https://soheekiim.github.io/mirror/terms">TERMS & CONDITIONS</a>
       </div>
 
     </div>
