html and css edits

--- a/account.html
+++ b/account.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>my account | MIRROR</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="account.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@200;300;400&display=swap" rel="stylesheet">
   </head>
@@ -15,6 +15,7 @@
       </div>
 
       <div id="navbar">
+      <div id="navbarflex">
         <div id="mirror">
           <a id="websitename">MIRROR</a>
         </div>
@@ -25,33 +26,104 @@
           <a class="tab" href="https://soheekiim.github.io/mirror/beta">BETA VERSION</a>
         </div>
       </div>
+      </div>
 
       <div id="content">
-        <img id="logo" src="mirror.png">
-        <p>total reflections: 240</p>
+        <img id="pf" src="pf.png">
+        <p>total reflections: 140</p>
         <p>highest rank to date: 76</p>
-        <p>-</p>
+        <p>updated: today, 1 hour ago</p>
+          <p>-</p>
         <p>account details<p>
+        <p>full name: Alex Lee</p>
+        <p>email: alexlee@nyu.edu</p>
+        <p>gender: non-binary</p>
         <p>birthday: 07/17/00</p>
         <p>zodiac: cancer</p>
+        <p>nationality: Canadian</p>
+        <p>birth place: Toronto, Canada</p>
+        <p>current residence: Brooklyn, NY</p>
+          <p>-</p>
+        <p>HEALTH / PHYSICAL</p>
+        <p>height: 5'10"</p>
+        <p>weight: 150 lbs</p>
+        <p>eye color: hazel</p>
+        <p>hair color: light brown</p>
         <p>blood type: A</p>
-        <!-- <p>covid vaccination:</p>
-        <p>interests:</p>
-        <p>hobbies:</p>
-        <p>college:</p>
-        <p>high school:</p>
-        <p></p>
-        <p></p> -->
+        <p>covid vaccination: yes</p>
+        <p>covid vaccine type: Moderna<p>
+          <p>-</p>
+        <p>EDUCATION</p>
+        <p>school: New York University</p>
+        <p>major: Integrated Design & Media</p>
+        <p>minor: Media, Culture, & Communication</p>
+        <p>year: senior</p>
+        <p>study away: yes</p>
+        <p>study away site: NYU London</p>
+        <p>study away semester: Spring 2020</p>
+        <p>student leave: yes</p>
+        <p>gap semester: Fall 2020</p>
+          <p>-</p>
+        <p>INTERESTS</p>
+        <p>favorite book(s): 1984, Brave New World</p>
+        <p>favorite series: Black Mirror, Parks and Recreation</p>
+        <p>favorite film(s): The Truman Show, The Matrix</p>
+        <p>favorite artist(s): Kota the Friend, The Radio Dept</p>
+        <p>hobbies: streaming on Twitch, vlogging on Youtube, scrolling on TikTok</p>
+          <p>-</p>
+        <p>SOCIALS</p>
+        <p>spotify: alex lee</p>
+        <p>soundcloud: @alexleemusic<p>
+        <p>instagram: @alexlee</p>
+        <p>facebook: alex lee</p>
+        <p>twitter: @alexlee</p>
+        <p>youtube: @heyitsalex</p>
+        <p>twitch: @helloalex</p>
+        <p>tiktok: @thisisalexlee</p>
+          <p>-</p>
+        <p>MISC</p>
+        <p>mbti: enfj</p>
+        <p>shoe size: 8</p>
+        <p>fashion style: casual, street, athleisure</p>
+        <p>favorite cities: new york, london, toronto</p>
+        <p>language(s): english, french</p>
+        <p>average hours of sleep: 6</p>
+        <p>sibling(s): 1 sister, 1 brother</p>
+        <p>dream career: brand designer</p>
+        <p>dislikes: lemons, cats, early mornings</p>
+        <p>stocks: AAPL, AMZN, TSLA, NFLX</p>
+          <p>-</p>
+        <p>STATEMENTS</p>
+        <p>The first thing I do when I wake up is to check my phone.</p>
+        <p>My favorite drink is an iced americano.</p>
+        <p>In unfamiliar settings, I tend to be an introverted extrovert.</p>
+        <p>My ideal date would be going to the beach.</p>
+        <p>Friends would describe me as down to earth and open-minded.</p>
+        <p>If I am stranded on a deserted island, I would have a meltdown.</p>
+        <p>My favorite high school course was AP Art History.</p>
+        <p>If I win the lottery, I would buy a building in New York.</p>
+        <p>I regularly shop on / at ASOS, SSENSE and Urban Outfitters.</p>
+        <p>Movies on my watchlist include Minari and Dreams.</p>
+        <p>Even a small mistake can cause me to doubt my worth.</p>
+        <p>I thrive on making things orderly and aesthetically pleasing.</p>
+        <p>When I was young, I wanted to become a preschool teacher.</p>
+        <p>Never have I ever faked being sick from work or school.</p>
+        <p>This summer, I have been rejected from 4 internships.</p>
+        <p>My average monthly spending is between $1500 - $3000.</p>
+        <p>After a long and exhausting week, a lively social event is just what I need.</p>
       </div>
 
       <div id="footer">
+          <div>
           <a class="tab" href="https://soheekiim.github.io/mirror/privacy">PRIVACY POLICY</a>
-          <a class="tab" href="https://soheekiim.github.io/mirror/terms">TERMS & CONDITIONS</a>
+          </div>
+
+          <div>
+          <a id="btab" class="tab" href="https://soheekiim.github.io/mirror/terms">TERMS & CONDITIONS</a>
+          </div>
       </div>
 
     </div>
-
-    <script src="script.js"></script>
 
   </body>
 </html>
