--- a/index.html
+++ b/index.html
@@ -27,22 +27,23 @@
       </div>
 
       <div id="content">
+        <div id="flexpf">
         <img id="logo" src="mirror.png">
+        </div>
+        <div id="intro">
         <p>Welcome to your Mirror, Alex.</p>
         <p>This is your fourth look today.</p>
-        <!-- <p>-</p> -->
         <p>daily reflection: 42% completed</p>
         <p>current rank: 109</p>
+        </div>
       </div>
 
       <div id="footer">
           <a class="tab" href="https://soheekiim.github.io/mirror/privacy">PRIVACY POLICY</a>
-          <a class="tab" href="https://soheekiim.github.io/mirror/terms">TERMS & CONDITIONS</a>
+          <a id="btab" class="tab" href="https://soheekiim.github.io/mirror/terms">TERMS & CONDITIONS</a>
       </div>
 
     </div>
-
-    <script src="script.js"></script>
 
   </body>
 </html>
