--- a/terms.html
+++ b/terms.html
@@ -30,12 +30,40 @@
 
       <div id="content">
         <h3>terms & conditions</h3>
-        <p>This MIRROR website (hereinafter the "Site") is published by Mirror Inc. d.b.a. Mirror ("Mirror", "we", "us", "our"),
+        <p>This MIRROR website (hereinafter the "Site") is published by Mirror Inc. d.b.a. Mirror ("Mirror", "we", "our"),
           a US corporation, with registered office at 18 Grattan St, Brooklyn, New York and registered with the New York State.</p>
-          <p>-</p>
-        <p>1. background<p>
-        <p>1.1 This Site is a social </p>
 
+        <p>-</p>
+
+        <p> These Terms and Conditions of Use govern all use of Mirror and our offered services.
+          Access to and use of Mirror and its services implies the unreserved acceptance of these Terms and Conditions of Use.
+          Users therefore confirm that they have read and understood these Terms and Conditions of Use before accessing Mirror
+          and they undertake to comply with them.</p>
+
+        <p>-</p>
+
+        <p>Users agree to deliver real, accurate, current information on Mirror and its daily reflections
+          and to keep up to date the information provided to ensure accuracy of the service.</p>
+
+        <p>When users enter personal information on Mirror, they must be the rightful owner of the information provided or be duly authorized to make public.</p>
+
+        <p>-</p>
+
+        <p>Mirror's activity entails the processing of personal data in accordance with Mirror's Private Policy.</p>
+
+        <p>You acknowledge that Mirror has no control over the terms and conditions and/or privacy policies of
+           third party sites and that such terms and conditions and/or privacy policies will govern your rights and obligations
+           with respect to the use of external websites.</p>
+
+        <p>-</p>
+
+        <p>Finally, you acknowledge and agree that Mirror shall not be responsible or liable, directly or indirectly,
+          for any damage or loss caused by or in connection with use of or reliance on any information or services on or available through Mirror.</p>
+
+        <p>-</p>
+
+        <p>Please take the time to read these Terms & Conditions carefully.<br>
+          If you have any questions or comments, please contact us at info@mirror.com.</p>
 
       </div>
 
