--- a/account.html
+++ b/account.html
@@ -66,9 +66,9 @@
           <p>-</p>
         <p>INTERESTS</p>
         <p>favorite book(s): 1984, Brave New World</p>
-        <p>favorite series: Black Mirror, Parks and Recreation</p>
+        <p>favorite series: Black Mirror, Westworld</p>
         <p>favorite film(s): The Truman Show, The Matrix</p>
-        <p>favorite artist(s): Kota the Friend, The Radio Dept</p>
+        <p>favorite artist(s): Kota the Friend, Sunset Rollercoaster</p>
         <p>hobbies: streaming on Twitch, vlogging on Youtube, scrolling on TikTok</p>
           <p>-</p>
         <p>SOCIALS</p>
