--- a/beta.html
+++ b/beta.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>beta | MIRROR</title>
-    <link rel="stylesheet" href="privacy.css">
+    <link rel="stylesheet" href="beta.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@200;300;400&display=swap" rel="stylesheet">
   </head>
@@ -29,10 +29,43 @@
       </div>
 
       <div id="content">
-        <h3>beta version</h3>
+        <h3>daily reflections</h3>
         <p>Mirror will officially launch in Winter 2021.<br>
-          Thank you for being an early adopter!</p>
+          Alex, thank you for being an early adopter!</p>
           <p>-</p>
+
+          <div id="jsquiz">
+
+          </div>
+
+          <div class="reflection">
+          <p>reflection 1</p>
+          <p>how are you feeling today?</p>
+
+          <input id="reflectionInput" type="text"></input>
+          <button id="reflection">reflect</button>
+
+          <div id="reflectionOutput">
+            <p id="outputTextOne">&nbsp</p>
+          </div>
+          </div>
+
+
+          <div class="reflection">
+          <p>reflection 2</p>
+          <p>what's your mbti?</p>
+          <!-- add questions here -->
+          <button id="answer">find out</button>
+
+          <div id="mbtiOutput">
+            <p id="outputTextTwo">&nbsp</p>
+          </div>
+          </div>
+
+
+          <!-- <div id="quiz1"></div>
+          <button id="submit">submit</button>
+          <div id="result1"></div> -->
 
       </div>
 
@@ -45,6 +78,10 @@
           <a id="btab" class="tab" href="https://soheekiim.github.io/mirror/terms">TERMS & CONDITIONS</a>
           </div>
       </div>
+
+
+      <script src="script.js"></script>
+
 
     </div>
 
