--- a/beta.html
+++ b/beta.html
@@ -34,38 +34,65 @@
           Alex, thank you for being an early adopter!</p>
           <p>-</p>
 
-          <div id="jsquiz">
-
-          </div>
 
           <div class="reflection">
-          <p>reflection 1</p>
-          <p>how are you feeling today?</p>
+            <p>reflection 1</p>
+            <p>how am I feeling today?</p>
 
-          <input id="reflectionInput" type="text"></input>
-          <button id="reflection">reflect</button>
+            <input id="reflectionInput" type="text"></input>
+            <button id="reflection">reflect</button>
 
-          <div id="reflectionOutput">
-            <p id="outputTextOne">&nbsp</p>
-          </div>
+            <div id="reflectionOutput">
+              <p id="outputTextOne">&nbsp</p>
+            </div>
           </div>
 
 
           <div class="reflection">
-          <p>reflection 2</p>
-          <p>what's your mbti?</p>
-          <!-- add questions here -->
-          <button id="answer">find out</button>
+            <p>reflection 2</p>
+            <p>what am I?</p>
 
-          <div id="mbtiOutput">
-            <p id="outputTextTwo">&nbsp</p>
+            <div id="quiz1"></div>
+            <button id="submit1">reflect</button>
+
+            <div id="results1">
+              <p id="outputTextTwo">&nbsp</p>
+            </div>
           </div>
+
+
+          <div class="reflection">
+            <p>reflection 3</p>
+            <p>how am I dressed today?</p>
+
+            <input id="reflectionInputTwo" type="text"></input>
+            <button id="reflectionTwo">reflect</button>
+
+            <div id="reflectionOutputTwo">
+              <p id="outputTextThree">&nbsp</p>
+            </div>
           </div>
 
 
-          <!-- <div id="quiz1"></div>
-          <button id="submit">submit</button>
-          <div id="result1"></div> -->
+          <div class="reflection">
+            <p>reflection 4</p>
+            <p>what are my favorites?</p>
+
+            <p>books:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="text"></input></p>
+            <p>tv series:&nbsp&nbsp<input type="text"></input></p>
+            <p>films:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="text"></input></p>
+            <p>artists:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="text"></input></p>
+
+            <button id="reflectionThree">reflect</button>
+
+            <div id="reflectionOutputThree">
+              <p id="outputTextFour">&nbsp</p>
+            </div>
+
+
+          </div>
+
+
 
       </div>
 
