css final edits

--- a/beta.html
+++ b/beta.html
@@ -40,7 +40,7 @@
             <p>how am I feeling today?</p>
 
             <input id="reflectionInput" type="text"></input>
-            <button id="reflection">reflect</button>
+            <button id="reflection" class="button">reflect</button>
 
             <div id="reflectionOutput">
               <p id="outputTextOne">&nbsp</p>
@@ -53,7 +53,7 @@
             <p>what am I?</p>
 
             <div id="quiz1"></div>
-            <button id="submit1">reflect</button>
+            <button id="submit1" class="button">reflect</button>
 
             <div id="results1">
               <p id="outputTextTwo">&nbsp</p>
@@ -66,7 +66,7 @@
             <p>how am I dressed today?</p>
 
             <input id="reflectionInputTwo" type="text"></input>
-            <button id="reflectionTwo">reflect</button>
+            <button id="reflectionTwo" class="button">reflect</button>
 
             <div id="reflectionOutputTwo">
               <p id="outputTextThree">&nbsp</p>
@@ -83,7 +83,7 @@
             <p>films:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="text"></input></p>
             <p>artists:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="text"></input></p>
 
-            <button id="reflectionThree">reflect</button>
+            <button id="reflectionThree" class="button">reflect</button>
 
             <div id="reflectionOutputThree">
               <p id="outputTextFour">&nbsp</p>
